--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-19 Sun 13:52 -->
+<!-- 2025-10-19 Sun 14:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>@@html:&amp;#x202e;@@ועדת הוראה, שנה א'@@html:&amp;#x202c;@@</title>
@@ -203,58 +203,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga368e63">1. תקציר</a>
+<li><a href="#org7a71fea">1. למי לפנות</a></li>
+<li><a href="#org3605a0e">2. יצירת קשר</a></li>
+<li><a href="#orge3ce139">3. תקציר</a>
 <ul>
-<li><a href="#orge2248fb">1.1. במה ועדת הוראה מטפלת</a></li>
-<li><a href="#orgdc293d4">1.2. במה ועדת הוראה אינה מטפלת</a></li>
-<li><a href="#orgf43bb2f">1.3. דוגמאות</a></li>
+<li><a href="#org97631f5">3.1. מול התלמידים</a>
+<ul>
+<li><a href="#org39746ca">3.1.1. במה ועדת הוראה מטפלת</a></li>
+<li><a href="#org03e4a8d">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
+<li><a href="#org9ddca9c">3.1.3. דוגמאות</a></li>
 </ul>
 </li>
-<li><a href="#org7c79cf0">2. למי לפנות</a></li>
-<li><a href="#orgd5351d2">3. יצירת קשר</a></li>
-<li><a href="#orge2132b9">4. נהלים</a></li>
+<li><a href="#org0a7b457">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
+</ul>
+</li>
+<li><a href="#orgd05861d">4. נהלים</a></li>
 </ul>
 </div>
 </div>
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orga368e63" class="outline-2">
-<h2 id="orga368e63"><span class="section-number-2">1.</span> תקציר</h2>
+<div id="outline-container-org7a71fea" class="outline-2">
+<h2 id="org7a71fea"><span class="section-number-2">1.</span> למי לפנות</h2>
 <div class="outline-text-2" id="text-1">
-</div>
-<div id="outline-container-orge2248fb" class="outline-3">
-<h3 id="orge2248fb"><span class="section-number-3">1.1.</span> במה ועדת הוראה מטפלת</h3>
-<div class="outline-text-3" id="text-1-1">
-<ul class="org-ul">
-<li>בקשות למועדים מיוחדים</li>
-<li>חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים</li>
-<li>סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר</li>
-<li>הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)</li>
-<li>טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orgdc293d4" class="outline-3">
-<h3 id="orgdc293d4"><span class="section-number-3">1.2.</span> במה ועדת הוראה אינה מטפלת</h3>
-<div class="outline-text-3" id="text-1-2">
-<ul class="org-ul">
-<li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
-<ul class="org-ul">
-<li>תלונות לגבי קושי של שאלות בבחינה או שעורי בית</li>
-<li>תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית</li>
-<li>ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם</li>
-</ul></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orgf43bb2f" class="outline-3">
-<h3 id="orgf43bb2f"><span class="section-number-3">1.3.</span> דוגמאות</h3>
-</div>
-</div>
-
-<div id="outline-container-org7c79cf0" class="outline-2">
-<h2 id="org7c79cf0"><span class="section-number-2">2.</span> למי לפנות</h2>
-<div class="outline-text-2" id="text-2">
 <p>
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
 </p>
@@ -268,9 +239,9 @@
 </div>
 </div>
 
-<div id="outline-container-orgd5351d2" class="outline-2">
-<h2 id="orgd5351d2"><span class="section-number-2">3.</span> יצירת קשר</h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-org3605a0e" class="outline-2">
+<h2 id="org3605a0e"><span class="section-number-2">2.</span> יצירת קשר</h2>
+<div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -314,11 +285,78 @@
 </div>
 </div>
 
-<div id="outline-container-orge2132b9" class="outline-2">
-<h2 id="orge2132b9"><span class="section-number-2">4.</span> נהלים</h2>
+<div id="outline-container-orge3ce139" class="outline-2">
+<h2 id="orge3ce139"><span class="section-number-2">3.</span> תקציר</h2>
+<div class="outline-text-2" id="text-3">
+</div>
+<div id="outline-container-org97631f5" class="outline-3">
+<h3 id="org97631f5"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
+<div class="outline-text-3" id="text-3-1">
+</div>
+<div id="outline-container-org39746ca" class="outline-4">
+<h4 id="org39746ca"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
+<div class="outline-text-4" id="text-3-1-1">
+<ul class="org-ul">
+<li>בקשות למועדים מיוחדים</li>
+<li>חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים</li>
+<li>סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר</li>
+<li>הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)</li>
+<li>טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org03e4a8d" class="outline-4">
+<h4 id="org03e4a8d"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
+<div class="outline-text-4" id="text-3-1-2">
+<ul class="org-ul">
+<li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
+<ul class="org-ul">
+<li>תלונות לגבי קושי של שאלות בבחינה או שעורי בית</li>
+<li>תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית</li>
+<li>ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org9ddca9c" class="outline-4">
+<h4 id="org9ddca9c"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
+<div class="outline-text-4" id="text-3-1-3">
+<ul class="org-ul">
+<li>ערערתם על בדיקת שאלה בבחינה, המרצה דחה את הערעור שלכם ☜ זה לא נושא לועדת הוראה</li>
+<li>המרצה לא הופיע לשעות הקבלה שלו ☜ זה נושא לועדת הוראה</li>
+<li>לדעתכם הציון בבחינה/בקורס לא משקפת את ידיעותיכם ☜ זה לא נושא לועדת הוראה</li>
+<li>המרצה דחה את הערעור שלכם מבלי לנמק ☜ זה נושא לועדת הוראה</li>
+<li>המרצה הוריד "יותר מדי" נקודות בשאלה מסויימת ☜ זה לא נושא לועדת הוראה</li>
+<li>המרצה שינה את הסילאבוס של הקורס לאחר סוף תקופת השינויים ☜ זה [עשוי להיות] נושא לועדת הוראה</li>
+<li>הממוצע בקורס השנה שונה מן הממוצע בשנים קודמות ☜ זה לא נושא לועדת הוראה</li>
+<li>אף אחד מסגל הקורס לא נכנס לחדר הבחינה או אסף פתקי השגות/הבהרות בבחינה ☜ זה נושא לועדת הוראה</li>
+<li>הקורס השנה שונה מהקורס בשנים קודמות ☜ זה לא נושא לועדת הוראה</li>
+<li>תיקונים/הבהרות לטופס הבחינה נכתבו בחלק מכתות הבחינה אבל לא בכולן ☜ זה נושא לועדת הוראה</li>
+</ul>
+</div>
+</div>
+</div>
+<div id="outline-container-org0a7b457" class="outline-3">
+<h3 id="org0a7b457"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
+<div class="outline-text-3" id="text-3-2">
+<ul class="org-ul">
+<li>החלטות מעבר ("הפסקות לימודים")</li>
+<li>קביעת תוכניות לימודים לתלמידים במצב אקדמי לא־תקין</li>
+<li>טיפול בבקשות למועדים מיוחדים</li>
+<li>טיפול בבקשות לחילופי סטודנטים</li>
+</ul>
+<p>
+וכולי
+</p>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgd05861d" class="outline-2">
+<h2 id="orgd05861d"><span class="section-number-2">4.</span> נהלים</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
-<li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
+<li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
 <li>מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). <b>שעות הקבלה לקורסים שלי הם פרונטליים</b></li>
 <li>אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a>
 <ul class="org-ul">
@@ -341,7 +379,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2025-10-19 Sun 13:52</p>
+<p class="date">Created: 2025-10-19 Sun 14:19</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
