--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-19 Sun 14:27 -->
+<!-- 2025-10-19 Sun 14:59 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>@@html:&amp;#x202e;@@ועדת הוראה, שנה א'@@html:&amp;#x202c;@@</title>
@@ -203,28 +203,28 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4c696a1">1. למי לפנות</a></li>
-<li><a href="#org9119122">2. יצירת קשר</a></li>
-<li><a href="#orgdec3b93">3. תקציר</a>
+<li><a href="#org50b9f4c">1. למי לפנות</a></li>
+<li><a href="#org59b6085">2. יצירת קשר</a></li>
+<li><a href="#orga6944b5">3. תפקידי ועדת הוראה</a>
 <ul>
-<li><a href="#org4df6251">3.1. מול התלמידים</a>
+<li><a href="#orgd67fc7e">3.1. מול התלמידים</a>
 <ul>
-<li><a href="#org139d6b4">3.1.1. במה ועדת הוראה מטפלת</a></li>
-<li><a href="#org88a3b0c">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
-<li><a href="#orge769802">3.1.3. דוגמאות</a></li>
+<li><a href="#org81e9091">3.1.1. במה ועדת הוראה מטפלת</a></li>
+<li><a href="#orge13acf4">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
+<li><a href="#orgb2606a6">3.1.3. דוגמאות</a></li>
 </ul>
 </li>
-<li><a href="#orgb90a799">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
+<li><a href="#org6d4f5e6">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
 </ul>
 </li>
-<li><a href="#orgfd5d189">4. נהלים</a></li>
+<li><a href="#orgd59f5b9">4. נהלים</a></li>
 </ul>
 </div>
 </div>
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org4c696a1" class="outline-2">
-<h2 id="org4c696a1"><span class="section-number-2">1.</span> למי לפנות</h2>
+<div id="outline-container-org50b9f4c" class="outline-2">
+<h2 id="org50b9f4c"><span class="section-number-2">1.</span> למי לפנות</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
@@ -239,8 +239,8 @@
 </div>
 </div>
 
-<div id="outline-container-org9119122" class="outline-2">
-<h2 id="org9119122"><span class="section-number-2">2.</span> יצירת קשר</h2>
+<div id="outline-container-org59b6085" class="outline-2">
+<h2 id="org59b6085"><span class="section-number-2">2.</span> יצירת קשר</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -285,16 +285,16 @@
 </div>
 </div>
 
-<div id="outline-container-orgdec3b93" class="outline-2">
-<h2 id="orgdec3b93"><span class="section-number-2">3.</span> תקציר</h2>
+<div id="outline-container-orga6944b5" class="outline-2">
+<h2 id="orga6944b5"><span class="section-number-2">3.</span> תפקידי ועדת הוראה</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org4df6251" class="outline-3">
-<h3 id="org4df6251"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
+<div id="outline-container-orgd67fc7e" class="outline-3">
+<h3 id="orgd67fc7e"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
-<div id="outline-container-org139d6b4" class="outline-4">
-<h4 id="org139d6b4"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
+<div id="outline-container-org81e9091" class="outline-4">
+<h4 id="org81e9091"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-1">
 <ul class="org-ul">
 <li>בקשות למועדים מיוחדים</li>
@@ -305,8 +305,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org88a3b0c" class="outline-4">
-<h4 id="org88a3b0c"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
+<div id="outline-container-orge13acf4" class="outline-4">
+<h4 id="orge13acf4"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-2">
 <ul class="org-ul">
 <li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
@@ -318,8 +318,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orge769802" class="outline-4">
-<h4 id="orge769802"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
+<div id="outline-container-orgb2606a6" class="outline-4">
+<h4 id="orgb2606a6"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
 <div class="outline-text-4" id="text-3-1-3">
 <ul class="org-ul">
 <li>ערערתם על בדיקת שאלה בבחינה, המרצה דחה את הערעור שלכם ☜ זה לא נושא לועדת הוראה</li>
@@ -336,8 +336,8 @@
 </div>
 </div>
 </div>
-<div id="outline-container-orgb90a799" class="outline-3">
-<h3 id="orgb90a799"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
+<div id="outline-container-org6d4f5e6" class="outline-3">
+<h3 id="org6d4f5e6"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
 <div class="outline-text-3" id="text-3-2">
 <ul class="org-ul">
 <li>החלטות מעבר ("הפסקות לימודים")</li>
@@ -352,12 +352,12 @@
 </div>
 </div>
 
-<div id="outline-container-orgfd5d189" class="outline-2">
-<h2 id="orgfd5d189"><span class="section-number-2">4.</span> נהלים</h2>
+<div id="outline-container-orgd59f5b9" class="outline-2">
+<h2 id="orgd59f5b9"><span class="section-number-2">4.</span> נהלים</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
-<li>מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). <b>שעות הקבלה לקורסים שלי הם פרונטליים</b></li>
+<li>מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). <b>שעות הקבלה לקורסים שלי הם פרונטליות</b></li>
 <li>אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a>
 <ul class="org-ul">
 <li>גורמים שונים מטפלים בבקשות למועדים מיוחדים (המחלקה, הפקולטה, מדור בחינות, ולפעמים גם דיקנט הסטודנטים)</li>
@@ -380,7 +380,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2025-10-19 Sun 14:27</p>
+<p class="date">Created: 2025-10-19 Sun 14:59</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
