--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-19 Sun 14:59 -->
+<!-- 2025-10-19 Sun 15:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>@@html:&amp;#x202e;@@ועדת הוראה, שנה א'@@html:&amp;#x202c;@@</title>
@@ -203,28 +203,28 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org50b9f4c">1. למי לפנות</a></li>
-<li><a href="#org59b6085">2. יצירת קשר</a></li>
-<li><a href="#orga6944b5">3. תפקידי ועדת הוראה</a>
+<li><a href="#org850a982">1. למי לפנות</a></li>
+<li><a href="#orga0b8466">2. יצירת קשר</a></li>
+<li><a href="#orgdb56de1">3. תפקידי ועדת הוראה</a>
 <ul>
-<li><a href="#orgd67fc7e">3.1. מול התלמידים</a>
+<li><a href="#org2905d00">3.1. מול התלמידים</a>
 <ul>
-<li><a href="#org81e9091">3.1.1. במה ועדת הוראה מטפלת</a></li>
-<li><a href="#orge13acf4">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
-<li><a href="#orgb2606a6">3.1.3. דוגמאות</a></li>
+<li><a href="#orgbc4ef88">3.1.1. במה ועדת הוראה מטפלת</a></li>
+<li><a href="#org8db41e6">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
+<li><a href="#org68ad53c">3.1.3. דוגמאות</a></li>
 </ul>
 </li>
-<li><a href="#org6d4f5e6">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
+<li><a href="#org1c901bf">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
 </ul>
 </li>
-<li><a href="#orgd59f5b9">4. נהלים</a></li>
+<li><a href="#org32dd5fb">4. נהלים</a></li>
 </ul>
 </div>
 </div>
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org50b9f4c" class="outline-2">
-<h2 id="org50b9f4c"><span class="section-number-2">1.</span> למי לפנות</h2>
+<div id="outline-container-org850a982" class="outline-2">
+<h2 id="org850a982"><span class="section-number-2">1.</span> למי לפנות</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
@@ -239,8 +239,8 @@
 </div>
 </div>
 
-<div id="outline-container-org59b6085" class="outline-2">
-<h2 id="org59b6085"><span class="section-number-2">2.</span> יצירת קשר</h2>
+<div id="outline-container-orga0b8466" class="outline-2">
+<h2 id="orga0b8466"><span class="section-number-2">2.</span> יצירת קשר</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -285,16 +285,16 @@
 </div>
 </div>
 
-<div id="outline-container-orga6944b5" class="outline-2">
-<h2 id="orga6944b5"><span class="section-number-2">3.</span> תפקידי ועדת הוראה</h2>
+<div id="outline-container-orgdb56de1" class="outline-2">
+<h2 id="orgdb56de1"><span class="section-number-2">3.</span> תפקידי ועדת הוראה</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-orgd67fc7e" class="outline-3">
-<h3 id="orgd67fc7e"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
+<div id="outline-container-org2905d00" class="outline-3">
+<h3 id="org2905d00"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
-<div id="outline-container-org81e9091" class="outline-4">
-<h4 id="org81e9091"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
+<div id="outline-container-orgbc4ef88" class="outline-4">
+<h4 id="orgbc4ef88"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-1">
 <ul class="org-ul">
 <li>בקשות למועדים מיוחדים</li>
@@ -305,8 +305,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orge13acf4" class="outline-4">
-<h4 id="orge13acf4"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
+<div id="outline-container-org8db41e6" class="outline-4">
+<h4 id="org8db41e6"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-2">
 <ul class="org-ul">
 <li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
@@ -318,8 +318,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb2606a6" class="outline-4">
-<h4 id="orgb2606a6"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
+<div id="outline-container-org68ad53c" class="outline-4">
+<h4 id="org68ad53c"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
 <div class="outline-text-4" id="text-3-1-3">
 <ul class="org-ul">
 <li>ערערתם על בדיקת שאלה בבחינה, המרצה דחה את הערעור שלכם ☜ זה לא נושא לועדת הוראה</li>
@@ -336,8 +336,8 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org6d4f5e6" class="outline-3">
-<h3 id="org6d4f5e6"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
+<div id="outline-container-org1c901bf" class="outline-3">
+<h3 id="org1c901bf"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
 <div class="outline-text-3" id="text-3-2">
 <ul class="org-ul">
 <li>החלטות מעבר ("הפסקות לימודים")</li>
@@ -352,19 +352,19 @@
 </div>
 </div>
 
-<div id="outline-container-orgd59f5b9" class="outline-2">
-<h2 id="orgd59f5b9"><span class="section-number-2">4.</span> נהלים</h2>
+<div id="outline-container-org32dd5fb" class="outline-2">
+<h2 id="org32dd5fb"><span class="section-number-2">4.</span> נהלים</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
 <li>מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). <b>שעות הקבלה לקורסים שלי הם פרונטליות</b></li>
-<li>אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a>
+<li>אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות טופס ה<b>בקשה למועד מיוחד</b> שלצד הציון שלכם המופיע במערכת <b>גזר</b> (מידע אישי לסטודנט)
 <ul class="org-ul">
 <li>גורמים שונים מטפלים בבקשות למועדים מיוחדים (המחלקה, הפקולטה, מדור בחינות, ולפעמים גם דיקנט הסטודנטים)</li>
 <li>נציג ועדת הוראה (אני) הוא <b>רק חוליה אחת</b> בטיפול בבקשה שלכם</li>
-<li>פניה דרך <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a> מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר</li>
-<li>אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם ל<a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a>, כדי להבטיח שהטיפול יהיה נכון</li>
-<li>הטיפול בבקשה למועד מיוחד מתבצע מול <a href="https://in.bgu.ac.il/acadsec/DocLib2/exams.pdf">נוהל הבחינות האוניברסיטאי</a> ומול פירוט ותיעוד הנסיבות המיוחדות של התלמיד. נכונותו או חוסר־נכונותו של המרצה לתת מועד מיוחד אינן מהוות שיקול לשאלת הזכאות למועד מיוחד. לכן אל נא תפנו למרצים בנושא, אלא הגישו פניה באמצעות <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a></li>
+<li>פניה דרך טופס ה<b>בקשה למועד מיוחד</b> מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר</li>
+<li>אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם לטופס ה<b>בקשה למועד מיוחד</b>, כדי להבטיח שהטיפול יהיה נכון</li>
+<li>הטיפול בבקשה למועד מיוחד מתבצע מול <a href="https://in.bgu.ac.il/acadsec/DocLib2/exams.pdf">נוהל הבחינות האוניברסיטאי</a> ומול פירוט ותיעוד הנסיבות המיוחדות של התלמיד. נכונותו או חוסר־נכונותו של המרצה לתת מועד מיוחד אינן מהוות שיקול לשאלת הזכאות למועד מיוחד. לכן אל נא תפנו למרצים בנושא, אלא הגישו פניה באמצעות טופס ה<b>בקשה למועד מיוחד</b></li>
 </ul></li>
 <li>אם אתם מעוניינים ללמוד בחו"ל במסגרת התוכנית לחילופי סטודנטים, עליכם לפנות ל<a href="https://www.bgu.ac.il/general/studies-abroad/">טופס הממוחשב לחילופי סטודנטים</a> בפורטל הסטודנטיאלי שבאתר האוניברסיטה
 <ul class="org-ul">
@@ -380,7 +380,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2025-10-19 Sun 14:59</p>
+<p class="date">Created: 2025-10-19 Sun 15:51</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
