--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-28 Tue 10:38 -->
+<!-- 2025-10-29 Wed 10:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>@@html:&amp;#x202e;@@ועדת הוראה, שנה א'@@html:&amp;#x202c;@@</title>
@@ -203,45 +203,45 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3f19b4b">1. למי לפנות</a></li>
-<li><a href="#org3aec0d2">2. יצירת קשר</a></li>
-<li><a href="#org6c06b6c">3. תפקידי ועדת הוראה</a>
+<li><a href="#org26e34e1">1. למי לפנות</a></li>
+<li><a href="#orgeda5ab2">2. יצירת קשר</a></li>
+<li><a href="#orge3ca307">3. תפקידי ועדת הוראה</a>
 <ul>
-<li><a href="#org3bf96af">3.1. מול התלמידים</a>
+<li><a href="#org8176a11">3.1. מול התלמידים</a>
 <ul>
-<li><a href="#org9abe327">3.1.1. במה ועדת הוראה מטפלת</a></li>
-<li><a href="#org43cc090">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
-<li><a href="#org744a6ac">3.1.3. דוגמאות</a></li>
+<li><a href="#org26ee95c">3.1.1. במה ועדת הוראה מטפלת</a></li>
+<li><a href="#org4c312fb">3.1.2. במה ועדת הוראה אינה מטפלת</a></li>
+<li><a href="#org23aae22">3.1.3. דוגמאות</a></li>
 </ul>
 </li>
-<li><a href="#orgeedcb2b">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
+<li><a href="#orgd17f322">3.2. מול התוכנית, הפקולטה, והאוניברסיטה</a></li>
 </ul>
 </li>
-<li><a href="#orgca3e7b7">4. נהלים</a></li>
+<li><a href="#orgdb03e55">4. נהלים</a></li>
 </ul>
 </div>
 </div>
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org3f19b4b" class="outline-2">
-<h2 id="org3f19b4b"><span class="section-number-2">1.</span> למי לפנות</h2>
+<div id="outline-container-org26e34e1" class="outline-2">
+<h2 id="org26e34e1"><span class="section-number-2">1.</span> למי לפנות</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
 </p>
 <ul class="org-ul">
-<li>אם אתם <b>מילואימניקים</b>, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם נפגעים או מפונים או מטפלים בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל<a href="https://omriazencot.com/">עמרי אייזנקוט</a></li>
-<li>אם אתם תלמידי שנה א', בתוכנית החד־חוגית למדמ"ח או בתוכנית להנדסת תוכנה, פנו בבקשה ל<a href="mailto:gmayer@little-lisper.org">מאיר גולדברג</a> (אלי)</li>
-<li>אם אתם תלמידי שנה ב' או שנה מאוחרת יותר, בתוכנית החד־חוגית למדמ"ח או בתוכנית להנדסת תוכנה, פנו בבקשה ל<a href="https://www.cs.bgu.ac.il/~neimano/">עופר ניימן</a></li>
+<li>אם אתם <b>מילואימניקים</b>, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם <b>נפגעים</b> או <b>מפונים</b> או <b>מטפלים</b> בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל<a href="https://omriazencot.com/">עמרי אייזנקוט</a></li>
+<li>אם אתם תלמידי שנה א', <b>בתוכנית החד־חוגית למדמ"ח</b> או <b>בתוכנית להנדסת תוכנה</b>, פנו בבקשה ל<a href="mailto:gmayer@little-lisper.org">מאיר גולדברג</a> (אלי)</li>
+<li>אם אתם תלמידי שנה ב' או שנה מאוחרת יותר, <b>בתוכנית החד־חוגית</b> למדמ"ח או <b>בתוכנית להנדסת תוכנה</b>, פנו בבקשה ל<a href="https://www.cs.bgu.ac.il/~neimano/">עופר ניימן</a></li>
 <li>אם אתם תלמידי <b>מדעי הנתונים</b>, פנו בבקשה ל<a href="https://www.cs.bgu.ac.il/~erant">ערן טרייסטר</a></li>
 <li>אם אתם תלמידי <b>ביואינפורמטיקה</b>, פנו בבקשה ל<a href="https://www.cs.bgu.ac.il/~keasar/">חן קיסר</a></li>
-<li>אם אתם תלמידי תוכניות משולבות, דו־חוגיות, תוכניות עם התמחות מיוחדת (לדוגמא, משחקי מחשב), פנו ל<a href="https://www.cs.bgu.ac.il/~asharf/">אנדרי שרף</a></li>
+<li>אם אתם תלמידי <b>תוכניות משולבות, דו־חוגיות, תוכניות עם התמחות מיוחדת (לדוגמא, משחקי מחשב)</b>, פנו ל<a href="https://www.cs.bgu.ac.il/~asharf/">אנדרי שרף</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org3aec0d2" class="outline-2">
-<h2 id="org3aec0d2"><span class="section-number-2">2.</span> יצירת קשר</h2>
+<div id="outline-container-orgeda5ab2" class="outline-2">
+<h2 id="orgeda5ab2"><span class="section-number-2">2.</span> יצירת קשר</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -286,16 +286,16 @@
 </div>
 </div>
 
-<div id="outline-container-org6c06b6c" class="outline-2">
-<h2 id="org6c06b6c"><span class="section-number-2">3.</span> תפקידי ועדת הוראה</h2>
+<div id="outline-container-orge3ca307" class="outline-2">
+<h2 id="orge3ca307"><span class="section-number-2">3.</span> תפקידי ועדת הוראה</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org3bf96af" class="outline-3">
-<h3 id="org3bf96af"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
+<div id="outline-container-org8176a11" class="outline-3">
+<h3 id="org8176a11"><span class="section-number-3">3.1.</span> מול התלמידים</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
-<div id="outline-container-org9abe327" class="outline-4">
-<h4 id="org9abe327"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
+<div id="outline-container-org26ee95c" class="outline-4">
+<h4 id="org26ee95c"><span class="section-number-4">3.1.1.</span> במה ועדת הוראה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-1">
 <ul class="org-ul">
 <li>בקשות למועדים מיוחדים</li>
@@ -306,8 +306,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org43cc090" class="outline-4">
-<h4 id="org43cc090"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
+<div id="outline-container-org4c312fb" class="outline-4">
+<h4 id="org4c312fb"><span class="section-number-4">3.1.2.</span> במה ועדת הוראה אינה מטפלת</h4>
 <div class="outline-text-4" id="text-3-1-2">
 <ul class="org-ul">
 <li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
@@ -319,8 +319,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org744a6ac" class="outline-4">
-<h4 id="org744a6ac"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
+<div id="outline-container-org23aae22" class="outline-4">
+<h4 id="org23aae22"><span class="section-number-4">3.1.3.</span> דוגמאות</h4>
 <div class="outline-text-4" id="text-3-1-3">
 <ul class="org-ul">
 <li>ערערתם על בדיקת שאלה בבחינה, המרצה דחה את הערעור שלכם ☜ זה לא נושא לועדת הוראה</li>
@@ -337,8 +337,8 @@
 </div>
 </div>
 </div>
-<div id="outline-container-orgeedcb2b" class="outline-3">
-<h3 id="orgeedcb2b"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
+<div id="outline-container-orgd17f322" class="outline-3">
+<h3 id="orgd17f322"><span class="section-number-3">3.2.</span> מול התוכנית, הפקולטה, והאוניברסיטה</h3>
 <div class="outline-text-3" id="text-3-2">
 <ul class="org-ul">
 <li>החלטות מעבר ("הפסקות לימודים")</li>
@@ -353,8 +353,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgca3e7b7" class="outline-2">
-<h2 id="orgca3e7b7"><span class="section-number-2">4.</span> נהלים</h2>
+<div id="outline-container-orgdb03e55" class="outline-2">
+<h2 id="orgdb03e55"><span class="section-number-2">4.</span> נהלים</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
@@ -381,7 +381,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2025-10-28 Tue 10:38</p>
+<p class="date">Created: 2025-10-29 Wed 10:24</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
